--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,18 +1,54 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:orientation="vertical"
     tools:context=".MainActivity">
 
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="Hello World!"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+   <android.support.v4.widget.SwipeRefreshLayout
+       android:id="@+id/swipeLayout"
+       android:layout_width="match_parent"
+       android:layout_height="wrap_content">
+      <LinearLayout
+          android:layout_width="match_parent"
+          android:layout_height="match_parent"
+          android:background="#fff"
+          android:orientation="vertical">
+         <TextView
+             android:layout_width="match_parent"
+             android:layout_height="wrap_content"
+             android:text="Who's on Top?"
+             android:textAlignment="center"
+             android:textStyle="bold"
+             android:textSize="20dp"
+             android:layout_marginTop="20dp"
+             android:layout_marginBottom="10dp"
+             android:padding="15dp"/>
 
-</android.support.constraint.ConstraintLayout>
+         <android.support.v7.widget.RecyclerView
+             android:id="@+id/listRecycle"
+             android:layout_width="match_parent"
+             android:layout_height="wrap_content"
+             android:layout_marginTop="10dp"
+             android:layout_marginBottom="10dp"
+             android:layout_marginLeft="10dp"
+             android:layout_marginRight="10dp">
+         </android.support.v7.widget.RecyclerView>
+
+         <TextView
+             android:layout_width="match_parent"
+             android:layout_height="wrap_content"
+             android:text="+ add more data"
+             android:textAlignment="center"
+             android:textStyle="bold"
+             android:textSize="15sp"
+             android:textColor="@color/colorPrimary"
+             android:layout_marginTop="20dp"
+             android:layout_marginBottom="10dp"
+             android:padding="15dp"/>
+
+      </LinearLayout>
+   </android.support.v4.widget.SwipeRefreshLayout>
+</LinearLayout>
