add data(button add data hilang saat jumlah data jadi 5) OK

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -23,22 +23,32 @@
              android:textAlignment="center"
              android:textStyle="bold"
              android:textSize="20dp"
-             android:layout_marginTop="20dp"
-             android:layout_marginBottom="10dp"
+             android:layout_marginTop="10dp"
+             android:layout_marginBottom="5dp"
              android:padding="15dp"/>
 
          <android.support.v7.widget.RecyclerView
              android:id="@+id/listRecycle"
              android:layout_width="match_parent"
              android:layout_height="wrap_content"
-             android:layout_marginTop="10dp"
+             android:layout_marginTop="3dp"
              android:layout_marginBottom="10dp"
              android:layout_marginLeft="10dp"
+             android:layout_marginRight="10dp">
+         </android.support.v7.widget.RecyclerView>
 
+         <android.support.v7.widget.RecyclerView
+             android:id="@+id/addDataList"
+             android:layout_width="match_parent"
+             android:layout_height="wrap_content"
+             android:layout_marginTop="3dp"
+             android:layout_marginBottom="10dp"
+             android:layout_marginLeft="10dp"
              android:layout_marginRight="10dp">
          </android.support.v7.widget.RecyclerView>
 
          <TextView
+             android:id="@+id/addData"
              android:layout_width="match_parent"
              android:layout_height="wrap_content"
              android:text="+ add more data"
